--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
 
-            <h1>Lan ets</h1>
+            <!-- <h1>Lan ets</h1> -->
     </header>
 
     <div class="content">
@@ -72,6 +72,8 @@
         document.getElementById("decompte").innerHTML = "Dépression post-lan ets en cours";
       }
     }, 1000);
+
+
     </script>
 </footer>
 </html>
