--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <header>
-
+        <audio controls autoplay loop>
+          <source src="lqjr-song-omg-omg.mp3" type="audio/mpeg">
+        </audio>
             <!-- <h1>Lan ets</h1> -->
     </header>
 
@@ -27,10 +29,10 @@
         <div>
             <span class="liste">Starring : </span>
             <ul>
-                <li>Samuel Fillion as <b>Samtopkiller</b> </li>
-                <li>Simon Tétreault as <b>Supertett</b> </li>
-                <li>Antoine Beaulieu-Savard as <b>Toniestony</b> </li>
-                <li>Chris Gagnon as <b>picpopper</b> </li>
+                <li>Samuel Fillion as the <b>Samtopkiller</b> </li>
+                <li>Simon Tétreault as the <b>Supertett</b> </li>
+                <li>Antoine Beaulieu-Savard as the <b>Toniestony</b> </li>
+                <li>Chris Gagnon as the <b>picpopper</b> </li>
             </ul>
         </div>
     </div>
@@ -47,7 +49,7 @@
 
     <script>
     // Set the date we're counting down to
-    var countDownDate = new Date("Feb 8, 2019 11:30:00").getTime();
+    var countDownDate = new Date("Feb 8, 2019 11:00:00").getTime();
 
     // Update the count down every 1 second
     var x = setInterval(function() {
