--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Lan ETS</title>
-<link rel="stylesheet" type="text/css" href="style/styles.css">
-<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <title>Lan ETS</title>
+    <link rel="stylesheet" type="text/css" href="style/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
 
 
 </head>
+
 <body>
     <header>
         <audio controls autoplay loop>
-          <source src="lqjr-song-omg-omg.mp3" type="audio/mpeg">
+            <source src="lqjr-song-omg-omg.mp3" type="audio/mpeg">
         </audio>
-            <!-- <h1>Lan ets</h1> -->
+        <!-- <h1>Lan ets</h1> -->
     </header>
 
     <div class="content">
@@ -24,58 +26,58 @@
 
 
 
-<div class="grad">
-    <div class="featuring">
-        <div>
-            <span class="liste">Starring : </span>
-            <ul>
-                <li>Samuel Fillion as the <b>Samtopkiller</b> </li>
-                <li>Simon Tétreault as the <b>Supertett</b> </li>
-                <li>Antoine Beaulieu-Savard as the <b>Toniestony</b> </li>
-                <li>Chris Gagnon as the <b>picpopper</b> </li>
-            </ul>
+    <div class="grad">
+        <div class="featuring">
+            <div>
+                <span class="liste">Starring : </span>
+                <ul>
+                    <li>Samuel Fillion as the <b>Samtopkiller</b> </li>
+                    <li>Simon Tétreault as the <b>Supertett</b> </li>
+                    <li>Antoine Beaulieu-Savard as the <b>Toniestony</b> </li>
+                    <li>Chris Gagnon as the <b>picpopper</b> </li>
+                </ul>
+            </div>
+        </div>
+        <div class="sponsors">
+            <div class="tacobell"><img src="https://www.tacobell.ca/assets/images/svg/tacobell-header-logo.svg" alt=""></div>
+            <div class="rocket"><img src="images/rocket.png" alt=""></div>
+            <div class="csgo"><img src="images/csgo.jpg" alt=""></div>
+            <div class="dew"><img src="http://www.mountaindew.com/assets/images/dew-logo.svg" alt=""></div>
+            <div class="tos"><img src="https://www.doritos.ca/sites/doritos.ca/themes/doritos/img/gral/logo.png" alt=""></div>
+            <div class="redbull"><img src="" alt=""></div>
         </div>
     </div>
-    <div class="sponsors">
-        <div class="tacobell"><img src="https://www.tacobell.ca/assets/images/svg/tacobell-header-logo.svg" alt=""></div>
-        <div class="rocket"><img src="images/rocket.png" alt=""></div>
-        <div class="csgo"><img src="images/csgo.jpg" alt=""></div>
-        <div class="dew"><img src="http://www.mountaindew.com/assets/images/dew-logo.svg" alt=""></div>
-        <div class="tos"><img src="https://www.doritos.ca/sites/doritos.ca/themes/doritos/img/gral/logo.png" alt=""></div>
-    </div>
-</div>
 </body>
 <footer>
 
     <script>
-    // Set the date we're counting down to
-    var countDownDate = new Date("Feb 8, 2019 11:00:00").getTime();
+        // Set the date we're counting down to
+        var countDownDate = new Date("Feb 8, 2019 11:00:00").getTime();
 
-    // Update the count down every 1 second
-    var x = setInterval(function() {
+        // Update the count down every 1 second
+        var x = setInterval(function() {
 
-      // Get todays date and time
-      var now = new Date().getTime();
+            // Get todays date and time
+            var now = new Date().getTime();
 
-      // Find the distance between now and the count down date
-      var distance = countDownDate - now;
+            // Find the distance between now and the count down date
+            var distance = countDownDate - now;
 
-      // Time calculations for days, hours, minutes and seconds
-      var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-      var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-      var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-      var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+            // Time calculations for days, hours, minutes and seconds
+            var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+            var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+            var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-      document.getElementById("decompte").innerHTML = days + " jours " + hours + "h "
-      + minutes + "m " + seconds + "s ";
+            document.getElementById("decompte").innerHTML = days + " jours " + hours + "h " +
+                minutes + "m " + seconds + "s ";
 
-      if (distance < 0) {
-        clearInterval(x);
-        document.getElementById("decompte").innerHTML = "Dépression post-lan ets en cours";
-      }
-    }, 1000);
-
-
+            if (distance < 0) {
+                clearInterval(x);
+                document.getElementById("decompte").innerHTML = "Dépression post-lan ets en cours";
+            }
+        }, 1000);
     </script>
 </footer>
+
 </html>
