--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <ul>
                     <li>Samuel Fillion as the <b>Samtopkiller</b> </li>
                     <li>Simon Tétreault as the <b>Supertett</b> </li>
-                    <li>Antoine Beaulieu-Savard as the <b>Toniestony</b> </li>
+                    <li>Antoine Beaulieu-Savard as the <b>ToniestTony</b> </li>
                     <li>Chris Gagnon as the <b>picpopper</b> </li>
                 </ul>
             </div>
